--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head> 
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="N8G7XtDMVJvUTpqY-xECW2BGHRGCCqgzCS7iZpcg3DU" />
     <title>GESS</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
