--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head> 
     <meta charset="utf-8">
     <meta name="google-site-verification" content="PmR4g1WFRtIodPWi_6CO1F3Km70-5iosAkBKri45NHg" />
-    <title>GESS</title>
+    <title>GESS - Wan Lab</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
